# mensaman

./: README.md  pyproject.toml
mensaman/: __init__.py
mensaman/templates/: mensaman.jinja2
