[tool.poetry]
name = "mensaman"
version = "0.1.0"
description = ""
authors = ["Daniel Schadt <kingdread@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
jinja2 = "^3.1.2"
requests = "^2.31.0"

[tool.poetry.scripts]
mensaman = "mensaman:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
